<resources>
	<string name="hello">Welcome to the factory mode</string>
	<string name="app_name">Factory Mode</string>
	<string name="Settings">Setting</string>
	<string name="AutoTest">Test fixture</string>
	<string name="AllTest">All Test</string>
	<string name="Packageerror">Error, unable to find the application package!</string>
	<string name="PackageIerror">Internal error</string>
	<string name="BatteryLog">Power</string>
	<string name="battery_info_status_label">The state of charge:</string>
	<string name="battery_info_scale_label">The Battery:</string>
	<string name="battery_info_level_label">The current electricity:</string>
	<string name="battery_info_health_label">The status of power:</string>
	<string name="battery_info_technology_label">Power supply technology:</string>
	<string name="battery_info_voltage_label">The current voltage:</string>
	<string name="battery_info_voltage_units">mV</string>
	<string name="battery_info_temperature_label">The temperature of the power:</string>
	<string name="battery_info_temperature_units">° C</string>
	<string name="battery_info_uptime">The time of autostart:</string>
	<string name="battery_info_awake_battery">Wake up time of battery:</string>
	<string name="battery_info_awake_plugged">The charging time:</string>
	<string name="battery_info_screen_on">Screen open time:</string>
	<string name="battery_info_status_unknown">Unknown</string>
	<string name="battery_info_status_charging">Charge</string>
	<string name="battery_info_status_charging_ac">(AC)</string>
	<string name="battery_info_status_charging_usb">(USB)</string>
	<string name="battery_info_status_discharging">Discharging</string>
	<string name="battery_info_status_not_charging">No charge</string>
	<string name="battery_info_status_full">Full</string>
	<string name="battery_info_health_unknown">Unknown</string>
	<string name="battery_info_health_good">Good</string>
	<string name="battery_info_health_overheat">Overheated</string>
	<string name="battery_info_health_dead">Dead</string>
	<string name="battery_info_health_over_voltage">The voltage is too high</string>
	<string name="battery_info_health_unspecified_failure">Unknown error</string>
	<string name="TouchScreen">Touch</string>
	<string name="PointTest">Point test</string>
	<string name="LineTest">Line test</string>
	<string name="Result">Result</string>
	<string name="Offset">Offset：</string>
	<string name="TouchComplete">Test completed</string>
	<string name="Error">Error</string>
	<string name="DrawError">Draw Error！</string>
	<string name="Again">Retry</string>
	<string name="GoOn">Go on</string>
	<string name="BackLight">BackLight</string>
	<string name="Display_lcd_Text">Back Light</string>
	<string name="Memory">Data Partition</string>
	<string name="Audio">Audio</string>
	<string name="Camera">Camera</string>
	<string name="Camera_takepic">Photograph</string>
	<string name="Camera_notfound">Did not detect a front facing camera</string>
	<string name="WiFi">WiFi</string>
	<string name="WiFi_success">Success</string>
	<string name="WiFi_failed">Failed</string>
	<string name="WiFi_scaning">scaning...</string>
	<string name="WiFi_info_closeing">wifi closing...</string>
	<string name="WiFi_info_close">wifi closed</string>
	<string name="WiFi_info_opening">wifi opening</string>
	<string name="WiFi_info_open">wifi opened</string>
	<string name="WiFi_info_unknown">Unknown</string>
	<string name="WiFi_connecting">connecting...</string>
	<string name="WiFi_notfound_openap">Open AP not found</string>
	<string name="WiFi_strength">wifi strength:</string>
	<string name="HeadSet">Headset</string>
	<string name="HeadSet_plugged">Headset plugged</string>
	<string name="HeadSet_unplugged">Headset unplugged</string>
	<string name="HeadSet_tips">Please insert the Headset test</string>
	<string name="HeadSet_hook">Press the Hook key Headset!</string>
	<string name="HeadSet_hook_message">Please confirm when dialing long press Hook button Headset whether can hang up?</string>
	<string name="GPS">GPS</string>
	<string name="GPS_open">Open GPS</string>
	<string name="GPS_connect">GPS connecting...</string>
	<string name="GPS_normal">GPS OK</string>
	<string name="GPS_satelliteNum">GPS Search of satellite data:</string>
	<string name="GPS_Signal">GPS Signal :</string>
	<string name="GPS_Success">Success</string>
	<string name="GPS_time">Time consuming： %s minute</string>
	<string name="Sensor">Sensor</string>
	<string name="Vibrator">Vibrator</string>
	<string name="Signal">Call</string>
	<string name="YGPS">YGPS</string>
	<string name="AGPS">AGPS</string>
	<string name="Microphone">Microphone</string>
	<string name="Mic_start">Start record</string>
	<string name="Mic_stop">Stop recording and playback</string>
	<string name="Mic_play">Play</string>
	<string name="Mic_operation">Microphone options</string>
	<string name="Speaker_operation">Horn options</string>
	<string name="Bluetooth">Bluetooth</string>
	<string name="Bluetooth_open">Bluetooth Opened</string>
	<string name="Bluetooth_opening">Bluetooth opening...</string>
	<string name="Bluetooth_scaning">scaning...</string>
	<string name="Bluetooth_mac">MAC Address:</string>
	<string name="Bluetooth_scan_success">Find the finish</string>
	<string name="GSensor">GSensor</string>
	<string name="GSensor_info">Erect, flat, side vertical, observed gravity change!</string>
	<string name="MSensor">MSensor</string>
	<string name="MSensor_default_text">The unknown data</string>
	<string name="MSensor_North">North</string>
	<string name="MSensor_East">East</string>
	<string name="MSensor_South">South</string>
	<string name="MSensor_West">West</string>
	<string name="MSensor_north_east">north east</string>
	<string name="MSensor_south_east">south east</string>
	<string name="MSensor_south_west">south west</string>
	<string name="MSensor_north_west">north west</string>
	<string name="LSensor">LSensor</string>
	<string name="LSensor_default_text">The unknown data</string>
	<string name="LSensor_accuracy">Precision:</string>
	<string name="LSensor_value">Value:</string>
	<string name="LSensor_tips">In light and dark parts of observation data changes!</string>
	<string name="LCD_increase">Strong backlight</string>
	<string name="LCD_weaken">Weak backlight</string>
	<string name="Success">Success</string>
	<string name="Failed">Failed</string>
	<string name="psensor_hello">PSensor Verification</string>
	<string name="psensor_app_name">Psensor</string>
	<string name="proximity">proximity :</string>
	<string name="tips">Please hand placed and left the induction zone to watch the change in value!</string>
	<string name="Earphone">Earphone</string>
	<string name="battery_name">Power</string>
	<string name="touchscreen_name">Touch</string>
	<string name="speaker_name">Speaker</string>
	<string name="wifi_name">WiFi</string>
	<string name="bluetooth_name">Bluetooth</string>
	<string name="headset_name">Headset</string>
	<string name="earphone_name">Earphone</string>
	<string name="gps_name">GPS</string>
	<string name="vibrator_name">Vibrator</string>
	<string name="telephone_name">Call</string>
	<string name="backlight_name">Backlight</string>
	<string name="memory_name">DATA Area</string>
	<string name="gsensor_name">Gsensor</string>
	<string name="gsensorcali_name">Gsensor Calibration</string>
	<string name="msensor_name">Msensor</string>
	<string name="lsensor_name">Lsensor</string>
	<string name="psensor_name">Psensor</string>
	<string name="camera_name">Rear Camera</string>
	<string name="sdcard_name">T card</string>
	<string name="fmradio_name">FM Radio</string>
	<string name="KeyCode_name">Key</string>
	<string name="lcd_name">LCD</string>
	<string name="sim_name">SIM Card</string>
	<string name="microphone_name">Microphone</string>
	<string name="subcamera_name">front camera</string>
	<string name="headsethook_name">headset Hook</string>
	<string name="sdcard">T Card</string>
	<string name="sdcard_tips_success">detected to the SD card</string>
	<string name="sdcard_tips_failed">no detected to SD card</string>
	<string name="sdcard_totalsize">Total Size:</string>
	<string name="sdcard_freesize">Free Size:</string>
	<string name="FMRadio">FM Radio</string>
	<string name="FMRadio_notice">Select</string>
	<string name="KeyCode">Key</string>
	<string name="KeyCode_info">Please start to press button</string>
	<string name="LCD">LCD</string>
	<string name="SimCard">SIM Card</string>
	<string name="sim1_info_ok">SIM1: OK</string>
	<string name="sim1_info_failed">SIM1: Not found</string>
	<string name="sim2_info_ok">SIM2: OK</string>
	<string name="sim2_info_failed">SIM2: Not found</string>
	<string name="sim_info_ok">SIM: OK</string>
	<string name="sim_info_failed">SIM: Not found</string>
	<string name="Report">Test report</string>
	<string name="report_ok">Successful test item:</string>
	<string name="report_failed">Test failed item:</string>
	<string name="report_notest">No test item:</string>
	<string name="menu_exit">Exit test</string>
	<string name="Search">Search</string>
	<string name="MSensor_degree">°C</string>
	<string name="led_name">LED</string>
	<string name="usb_memory">USB Storage</string>
	<string name="internal_memory">Internal Memory</string>
	<string name="version">Version</string>
	<string name="factory_reset">factory reset</string>
	<string name="auto_test">"Auto Test"</string>
	<string name="single_test">"Hardware test"</string>
	<string name="test_result">"Test report"</string>
	<string name="master_clear">"Restore factory settings"</string>
	<string name="wait">"wait 。。。"</string>
	<string name="result_from_sn">"the test results obtained in the sign bit"</string>
	<string name="result_from_test">"Test results of auto test"</string>
	<string name="no_mmitest">"The lack of MMI test"</string>
	<string name="mmitest_success">"From the flag data to determine MMI test has been successfully"</string>
	<string name="mmitest_fail">"From the sign bit data to determine MMI test failure"</string>
	<string name="sn_info">"The sn number："</string>
	<string name="test_right">"Pass"</string>
	<string name="test_wrong">"Wrong"</string>
	<string name="fix">"Calibration"</string>
	<string name="right">"Pass"</string>
	<string name="wrong">"Wrong"</string>
	<string name="plus">"+"</string>
	<string name="minus">"-"</string>
	<string name="default_value">"Reset"</string>
	<string name="brand">Brand</string>
	<string name="model">Model</string>
	<string name="android_version">Android Version</string>
	<string name="cpu_model">CPU Model</string>
	<string name="gpu_render">GPU Render</string>
	<string name="resolution">Resolution</string>
	<string name="main_camera">Rear Camera</string>
	<string name="sub_camera">Front Camera</string>
	<string name="device_serialno">Device Serial Number</string>
	<string name="ram">Memory(Free/Total)</string>
	<string name="data_storage">Storage(Free/Total)</string>
	<string name="internal_storage">Internal storage(Free/Total)</string>
     <string name="msg_sim1">SIM1 Status:</string>
    <string name="msg_sim2">SIM2 Status:</string>
    <string name="msg_sim_state_unknown">Unable to obtain SIM status</string>
	<string name="tag_not_find">No labels found</string>
  <string name="scanner_name">Scanner</string>
  <string name="scanner_text">Align the device\'s scanning lights with the bar code</string>
    <string name="serial_baudrate">Serial baudrate:</string>
    <string name="serial_port">Serial port:</string>
    <string name="send">Send</string>
    <string name="receive_data">Receive Data ：</string>
    <string name="sendMsg">Please input send message !</string>
	<string name="gsensor_title">G-Sensor calibration</string>
	<string name="gsensor_description">Please place the phone on a level surface</string>
	<string name="gsensor_description2">Rotating equipment make the arrow above the induction to the up and down or so four directions</string>
	<string name="gsensor_calibrate">CALIBRATE</string>
</resources>