<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/info_layout">
	<include layout="@layout/yjzn_header"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/scanner_tips"
			
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/scanner_text"
			android:textColor="@color/Green"
	
			style="@style/info_label"/>

		<TextView
			android:id="@+id/scanner_accuracy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tag_not_find"
	
			style="@style/info_label"/>

	</LinearLayout>
	<Button
		android:id="@+id/scanner_take"
		android:layout_width="fill_parent"
		android:layout_height="80dp"
		android:layout_centerHorizontal="true"
		android:layout_above="@layout/yjzn_btns"
		android:background="@drawable/yjzn_btn_default"
		android:text="@string/scanner_name"
		android:textSize="25.0dip" />
	<include layout="@layout/yjzn_btns"/>
</LinearLayout>