<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_sim1"
            android:textSize="24.0sp" />

        <TextView
            android:id="@+id/sim1_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_sim_state_unknown"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20.0sp" />

        <TextView
            android:id="@+id/sim2_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_sim2"
            android:textSize="24.0sp" />

        <TextView
            android:id="@+id/sim2_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_sim_state_unknown"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20.0sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/status_success"
            android:layout_width="150.0dip"
            android:layout_height="60.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bt_true"
            android:enabled="false"
            android:text="@string/Success"
            android:textSize="25.0sp" />

        <Button
            android:id="@+id/status_fail"
            android:layout_width="150.0dip"
            android:layout_height="60.0dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bt_fail"
            android:text="@string/Failed"
            android:textSize="25.0sp" />
    </RelativeLayout>

</RelativeLayout>