<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
	
	    <TextView
			android:id="@+id/gsensor_title"
			android:layout_width="wrap_content"
			android:layout_height="60dp"
			android:textSize="25dp"
			android:layout_gravity="center_horizontal|center_vertical"
			android:text="@string/gsensor_title" />
  
    <RelativeLayout
	   android:id="@+id/layout_image_gsensor"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" >
        <ImageView 
            android:id="@+id/gsensor_image"
            android:layout_width="287dp"
            android:layout_height="122dp"
            android:layout_centerInParent="true"
            android:src="@drawable/gsensor_z"
            android:scaleType="fitXY"
			android:visibility="gone"
        />
    </RelativeLayout>
		
		<TextView
			android:id="@+id/gsensor_description"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:textSize="20dp"
			android:layout_gravity="center"
			android:text="@string/gsensor_description" />
  
    <RelativeLayout
	   android:id="@+id/layout_image_hor"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" >
        <ImageView 
            android:id="@+id/jiantou"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:src="@drawable/jiantou"
            android:scaleType="fitXY"
        />
    </RelativeLayout>
  
    <Button
		android:id="@+id/gyrosensor"					
		android:layout_width="fill_parent"
		android:layout_height="50dp"					
		android:textStyle="normal"
		android:layout_gravity="center"
        android:text="@string/gsensor_calibrate" >
	</Button>

	<TextView
			android:id="@+id/gsensor_description_2"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:textSize="20dp"
			android:layout_gravity="center"
			android:text="@string/gsensor_description2"
			android:visibility="gone" />

    <RelativeLayout
        style="@style/info_relative_layout">
        <include layout="@layout/normal_bottom_bar"/>
    </RelativeLayout>
</LinearLayout>
